--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -1,5 +1,5 @@
 {
-  "wallpaper": "$(cat ~/.bg)",
+  "wallpaper": "",
   "special": {
     "background": "#{{base00-hex}}",
     "foreground": "#{{base05-hex}}",
